--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ redux_test/node_modules
 react_staging/node_modules
 react_extension/node_modules
 hello/node_modules
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/05_learn_scaffold/node_modules
 /dist
 
 
