store的创建过程和使用

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ hello/node_modules
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/05_learn_scaffold/node_modules
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/05_learn_scaffold/package-lock.json
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/05_learn_scaffold/package.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/06_learn_redux/node_modules
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/06_learn_redux/package-lock.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/06_learn_redux/package.json
 /dist
 
 
