--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ React18全家桶+Hooks+项目实战-coderwhy2022系统课/05_learn_scaffold/pack
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/06_learn_redux/node_modules
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/06_learn_redux/package-lock.json
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/06_learn_redux/package.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/07_react_redux/node_modules
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/07_react_redux/package-lock.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/07_react_redux/package.json
 /dist
 
 
