--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@ React18全家桶+Hooks+项目实战-coderwhy2022系统课/06_learn_redux/package
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/07_react_redux/node_modules
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/07_react_redux/package-lock.json
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/07_react_redux/package.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/08_learn_reduxtoolkit/node_modules
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/08_learn_reduxtoolkit/package-lock.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/08_learn_reduxtoolkit/package.json
 /dist
 
 
