--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ React18全家桶+Hooks+项目实战-coderwhy2022系统课/08_learn_reduxtoolkit/
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/09_learn_react_router/node_modules
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/09_learn_react_router/package-lock.json
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/09_learn_react_router/package.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/10_learn_reacthooks/node_modules
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/10_learn_reacthooks/package-lock.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/10_learn_reacthooks/package.json
 /dist
 
 
