--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ React18全家桶+Hooks+项目实战-coderwhy2022系统课/09_learn_react_router/
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/10_learn_reacthooks/node_modules
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/10_learn_reacthooks/package-lock.json
 React18全家桶+Hooks+项目实战-coderwhy2022系统课/10_learn_reacthooks/package.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/node_modules
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/package-lock.json
+React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/package.json
 /dist
 
 
