--- a/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/package.json
+++ b/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
     "craco-less": "^2.1.0-alpha.0",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
@@ -14,6 +15,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
