--- a/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/package.json
+++ b/React18全家桶+Hooks+项目实战-coderwhy2022系统课/airbnb/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^5.20.3",
     "axios": "^1.7.4",
     "craco-less": "^2.1.0-alpha.0",
     "normalize.css": "^8.0.1",
